# qmltest

./: .gitignore  README.md
qml_in_executable/: CMakeLists.txt  application.cpp
qml_in_static_backing_lib-no_plugin/: CMakeLists.txt  application.cpp
qml_in_static_backing_lib-no_plugin/ui/: CMakeLists.txt  main.qml
